--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             </div>
         </div>
         <div>
-
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks cool.</p>
+            <span>-Tony Stark (Formerly known as The Iron Man)</span>
         </div>
         <div>
 
