Added the call to action section along with the footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="hero-text">
                 <h1 id="heading">This Website is Awesome!</h1>
                 <p id="subheading">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button id="heading-button">Sign Up</button>
+                <button>Sign Up</button>
             </div>
             <div id="image-placeholder">
                 <span>this is a placeholder for an image</span>
@@ -54,11 +54,17 @@
             <span>-Tony Stark (Formerly known as The Iron Man)</span>
         </div>
         <div>
-
+            <div id="call-to-action">
+                <div id="text">
+                    <h2>Call to Action! It's time!</h2>
+                    <span>Sign up for our product by clicking the button right over there!</span>
+                </div>
+                <button>Sign Up</button>
+            </div>
         </div>
     </main>
     <footer>
-
+        <span>Copyright © Rohan Swain</span>
     </footer>
 </body>
 </html>
